# ac4

./: .gitignore  README.md  check_syntax.py  pyproject.toml  test_new_examples.py
.github/workflows/: lab4.yml
course-note/: 00-info.md  01-course-description.md  02-computer-sowtware-systems-architecture.md  03-not-a-computer-relay-plc.md  04-binary-digital-scheme-state-condition.md  05-fabric-hardware-problems-2-step-manufacture.md  06-hw-sw-moc-mde.md  07-universal-processor-types-neumann-harvard.md  08-isa-overview-cisc-microccode-nisc.md  09-stack-risc-pipeline.md  10-io-mem-port-map-sw-io-cooperative-multitasking.md  11-permutative-multitask-isolation-interuption.md  12-memory-hierarchy-cells-cache.md  13-cache-associative-multilevel-cache-non-tasperency.md  14-level-org-low-level-parallelism-superscalar-vliw.md  15-high-level-lang-fpga-parallel-processor-flinn.md  16-duncan-cgra.md  50-refs.md  70-appendix.md  80-backlog.md  85-authors.md  lab4-task.md
examples/: cat.asm  hello.asm  poly.asm  prob2.asm  sort.asm  superscalar.asm  uint64.asm
golden/cat/: listing.hex  metadata.txt
golden/hello/: listing.hex  metadata.txt
golden/hello_user_name/: listing.hex  metadata.txt  source.asm
golden/poly/: listing.hex  metadata.txt  symbols.txt
golden/prob2/: listing.hex  metadata.txt  symbols.txt
golden/sort/: metadata.txt  symbols.txt
golden/superscalar/: metadata.txt  symbols.txt
img/: control_unit.drawio  datapath.drawio
lab4/: __init__.py  assembler.py  golden.py  isa.py  machine.py  microcode.py
tests/: test_toolchain.py
(+1 files in other folders)
